--- a/AUTHORS
+++ b/AUTHORS
@@ -1,4 +1,3 @@
 # This file lists all individuals having contributed content to the repository.
 
-Ahmed Hany <dev.ahmedhany@gmail.com>
-Menna Mohamed <79084467+MennaAnwar@users.noreply.github.com>
+Muhammad Hany <dev.mhany@gmail.com>
